Finished first pass at analysis

--- a/code/00_wrangle/wrangling_sensordata.Rmd
+++ b/code/00_wrangle/wrangling_sensordata.Rmd
@@ -212,6 +212,7 @@ shark_tp_data %$% summary(station_name_long) # No. of individuals detected - all
 # Save
 ```{r}
 save(shark_tp_data, file = "data/Rdata/shark_tp_data.Rdata")
+load(file = "data/Rdata/shark_tp_data.Rdata")
 ```
 
 
