--- a/code/02_model/resullts_SST_sex.Rmd
+++ b/code/02_model/resullts_SST_sex.Rmd
@@ -79,7 +79,7 @@ newdata_sex_SST <- sst_maxd_final %>%
 
 
 # And plot
-```{r  fig.width = 100/25.4, fig.height = 80/25.4}
+```{r  fig.width = 70/25.4, fig.height = 56/25.4}
 (sex_SST_plot1 <- 
 newdata_sex_SST %>% 
   ggplot() +
@@ -90,9 +90,9 @@ newdata_sex_SST %>%
   scale_colour_manual(values = c("darkblue", "dodgerblue")) +
   theme_minimal() +
 # theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-  ylab("Daily depth movement (m)\n(e.m. mean ± 95%CI)\n") + 
+  ylab("Daily depth movement (m ± 95%CI)\n") + 
   xlab("\nSex") +
-  theme(legend.position = c(0.25, 0.82),
+  theme(legend.position = "none",
         legend.background = element_rect(fill = "white", colour = "black"),
         axis.title = element_text(size = 9),
         legend.title = element_text(size = 8)))
