--- a/code/02_model/results_SST_season.Rmd
+++ b/code/02_model/results_SST_season.Rmd
@@ -71,6 +71,13 @@ shark_individual_daily_td %>%
                     Q3=~quantile(., probs = 0.75),
                     max=max))
 ```
+# First need to relevel season
+```{r}
+
+
+```
+
+
 
 # Also need to know the seasonal ranges
 ```{r}
@@ -104,12 +111,15 @@ season_ranges <-
   mutate(Season = "Autumn"))
 ```
 
+min.  max.  Season
+25.67	27.81	Winter		
+28.08	30.53	Summer		
+26.49	29.66	Spring		
+27.74	30.09	Autumn
+
 
 We'll use these values to set sensible limits on our model data
 
-```{r}
-season_ranges
-```
 
 # Create reference grid, emmmeans tbl and truncate SSTs as above
 ```{r}
@@ -196,6 +206,9 @@ newdata_Season_SST2 <- sst_maxd_final %>%
   regrid() %>% 
   as_tibble()
 
+# Get the full range to plot 
+full_response <- newdata_Season_SST2
+
 # Reminder of actual seasonal ranges
 #min    max   Season
 # 25.67	27.81	Winter		
@@ -214,32 +227,41 @@ newdata_Season_SST2 <- newdata_Season_SST2 %>%
 ```
 
 # And plot
-```{r  fig.width = 150/25.4, fig.height = 70/25.4}
-(Season_SST_plot2 <- 
+```{r  fig.width = 72/25.4, fig.height = 150/25.4}
+Season_SST_plot2 <- 
 newdata_Season_SST2 %>% 
   ggplot() +
-  geom_ribbon(aes(x = SST, y = response, ymin=asymp.LCL, ymax=asymp.UCL, group = Season), alpha = 0.2) +
+  geom_point(data = shark_individual_daily_td, aes(x = SST, y = daily_movement, colour = Season, fill = Season), 
+             pch = 20, alpha = 0.05, position = position_jitter(width = 0.5, height = 0.5)) +
+  geom_ribbon(data = full_response, aes(x = SST, y = response, ymin=asymp.LCL, ymax=asymp.UCL, fill = Season, group = Season), alpha = 0.2) +
+  geom_line(data = full_response, aes(x = SST, y = response, colour = Season, group = Season), alpha = 0.5, size = 0.5) +
+  geom_ribbon(aes(x = SST, y = response, ymin=asymp.LCL, ymax=asymp.UCL, fill = Season, group = Season), alpha = 0.5) +
   geom_line(aes(x = SST, y = response, colour = Season, group = Season), size = 1) +
   #scale_shape_manual(values = c(21, 22, 23)) +
-  scale_fill_manual(values = c("dodgerblue","red", "orange", "darkblue")) +
-  scale_colour_manual(values = c("dodgerblue","red", "orange", "darkblue")) +
+  scale_fill_manual(values = c("seagreen","red", "orange", "darkblue")) +
+  scale_colour_manual(values = c("seagreen","red", "orange", "darkblue")) +
   theme_minimal() +
-  scale_y_continuous(limits = c(10, 115), breaks = c(0, 25, 50, 75, 100)) +
+  scale_y_continuous(limits = c(10, 115), breaks = c(0, 25, 50, 75, 100),  expand = c(0,0)) +
+  scale_x_continuous(limits = c(25.65, 30.55), expand = c(0,0)) +
   theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 0.5)) +
-  ylab("Daily depth movement (m)\n(e.m. mean ± 95%CI)") + 
-  xlab("\nSST (°C)") +
-  theme(legend.position = c(0.16, 0.7),
-        legend.background = element_rect(fill = "white", colour = "black"),
+  ylab("Daily depth movement (m ± 95%CI)") + 
+  xlab("SST (°C)") +
+  theme(legend.position = "none",
+        strip.text = element_text(angle = 90, vjust = -0.5, size = 8),
+        strip.placement = "outside",
+        #legend.position = c(0.16, 0.7),
+        #legend.background = element_rect(fill = "white", colour = "black"),
         axis.title = element_text(size = 8),
-        axis.text = element_text(size = 8),
-        legend.title = element_text(size = 8),
-        legend.text = element_text(size = 8)))
-
+        axis.text = element_text(size = 8)) +
+        #legend.title = element_text(size = 8),
+        #legend.text = element_text(size = 8)) +
+  facet_wrap(~Season, ncol = 1, strip.position = "right")
+Season_SST_plot2
 ```
 
 # Save
 ```{r}
-ggsave(Season_SST_plot2, file = "output/Season_SST_plot2.pdf", width = 140, height = 70, device = cairo_pdf, units = "mm", dpi = 300)
+ggsave(Season_SST_plot2, file = "output/Season_SST_plot2.pdf", width = 80, height = 160, device = cairo_pdf, units = "mm", dpi = 300)
 ```
 
 ```{r  fig.width = 180/25.4, fig.height = 90/25.4}
