--- a/code/02_model/results_glmm2.Rmd
+++ b/code/02_model/results_glmm2.Rmd
@@ -201,7 +201,7 @@ TL_sex_fig <-
   scale_y_continuous(limits = c(0, 150), breaks = c(0, 50, 100, 150),  expand = c(0,0)) +
   scale_x_discrete(expand = c(0.1, 0.1)) +
   #theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 0.5)) +
-  ylab("Daily dep rng (m)") + 
+  ylab("Daily dep rg (m)") + 
   xlab("Body size") +
   theme(strip.text = element_text(size = 9, colour = "black"),
         #legend.direction = "horizontal",
@@ -213,7 +213,7 @@ TL_sex_fig <-
         #legend.key.size = unit(0.35, "cm"),
         #legend.background = element_rect(fill = "white", colour = "black"),
         axis.title.x = element_text(size = 9, colour = "black"),
-        axis.title.y = element_text(size = 9, hjust = 2, colour = "black"),
+        axis.title.y = element_text(size = 9, hjust = 0, colour = "black"),
         axis.text = element_text(size = 8, colour = "black"))
 
 TL_sex_fig 
@@ -237,11 +237,6 @@ TL_sex_SST_figcombined <-
   annotation_custom(male, xmin = 0.18, xmax = 0.25, ymin = 0.31) +
   annotation_custom(female, xmin = 0.18, xmax = 0.24, ymin = 0.83)
 TL_sex_SST_figcombined
-```
-
-```{r}
-mod1
-mod2
 ```
 
 
