--- a/code/00_wrangle/wrangling_SSTdata.Rmd
+++ b/code/00_wrangle/wrangling_SSTdata.Rmd
@@ -21,8 +21,11 @@ editor_options:
 
 ```{r include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-source("code/packages.R")
 #rm(list=ls()) # Clear out environment if necessary
+
+source("code/packages.R")
+source("code/extras.R")
+
 getwd()
 ```
 
@@ -49,12 +52,26 @@ AMM_SST %>%
   ggplot() +
   geom_line(aes(x = Month, y = AMM)) +
   geom_point(aes(x = Month, y = AMM)) +
-  theme_minimal() +
+  theme_bjc() +
   scale_x_date(date_breaks = "1 month", date_labels = '%b') +
   theme(axis.text.x = element_text(angle = 30,  vjust = 0.8)) +
   xlab("Month of year") + 
   ylab("Averaged monthly mean SST \n (°C)")
 ```
+
+Max, min and diffs:
+```{r}
+AMM_SST %>% 
+  summarise(max = max(AMM),
+            min = min(AMM), 
+            diff = max - min)
+```
+
+
+
+
+
+
 
 ## Load SST data for study period 
 Study period - October 2021 - October 2022
@@ -78,7 +95,7 @@ We obtained measurements for Osprey central (inside lagoon) as well as four othe
   geom_line(aes(x = date, y = SST_S), data = SST, colour = "orange") +
   geom_line(aes(x = date, y = SST_E), data = SST, colour = "green4") +
   geom_line(aes(x = date, y = SST_W), data = SST, colour = "yellow") +
-  theme_minimal() +
+  theme_bjc() +
   scale_x_date(date_breaks = "1 month", date_labels = '%b-%y') +
   theme(axis.text.x = element_text(angle = 30,  vjust = 0.8)) +
   xlab("Month/year") + 
@@ -93,7 +110,7 @@ ggplot() +
   geom_line(aes(x = Month, y = AMM), data = AMM_SST, col = "blue4") +
   geom_point(aes(x = Month, y = AMM), data = AMM_SST, col = "blue4", alpha =.5, size = 1) +
   geom_line(aes(x = date, y = SST), data = SST, colour = "black") +
-  theme_bw() +
+  theme_bjc() +
   scale_x_date(date_breaks = "1 month", date_labels = '%b-%y') +
   #theme(axis.text.x = element_blank()) +
   xlab("Month") + 
@@ -128,7 +145,7 @@ ggplot() +
   geom_line(aes(x = Month, y = MM), data = study_MM, colour = "firebrick") +
   geom_point(aes(x = Month, y = MM), data = study_MM, fill = "firebrick", colour = "black",
              stroke = 0.8, pch = 24, alpha = 0.9, size = 2) +
-  theme_minimal() +
+  theme_bjc() +
   scale_x_date(date_breaks = "1 month", date_labels = '%b-%y', limits = c(as_date("2021-10-14"), as_date("2022-10-16"))) +
   theme(axis.text.x = element_text(size = 9, angle = 45,  vjust = 1, hjust = 1)) +
   theme(axis.text.y = element_text(size = 9)) +
