--- a/code/01_eda/shark_daily_grouped.Rmd
+++ b/code/01_eda/shark_daily_grouped.Rmd
@@ -22,6 +22,7 @@ editor_options:
 ```{r include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 source("code/packages.R")
+source("code/extras.R")
 #rm(list=ls()) # Clear out environment if necessary
 ```
 
@@ -77,15 +78,40 @@ shark_daily_td <-
   SST %>% 
   full_join(shark_daily_depths) %>% 
   full_join(shark_daily_temps) %>% 
-  filter(date > as.Date("2021-10-29"))
-save(shark_daily_td, file = "data/Rdata/shark_daily_td.Rdata")
+  filter(date > as.Date("2021-10-29")) %>% 
+  mutate(daily_temp_diff = daily_max_temp - daily_min_temp,
+         daily_depth_diff = daily_max_depth -daily_min_depth)
+#save(shark_daily_td, file = "data/Rdata/shark_daily_td.Rdata")
 ```
 
 
 # 1. OVERVIEW #
 
+## SST only ##
+
+```{r fig.width = 140/25.4, fig.height = 40/25.4}
+sst_2021_2022 <- 
+  shark_daily_td %>% 
+  ggplot() +
+  geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.6, lty = 3313) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  xlab("\nMonth of year (2021 - 2022)") +
+  ylab("SST (°C)") +
+  theme_bjc() +
+  theme(axis.text.x = element_blank(),
+        axis.title.x = element_blank()) 
+
+# View
+sst_2021_2022
+
+# Save
+#ggsave(filename = "output/sst_2021_2022_fig.pdf", plot = sst_2021_2022,
+#       device = cairo_pdf, width = 140, height = 40, units = "mm", dpi = 300)
+```
+
+
 ## Daily temps (all) vs SST
-```{r fig.width = 170/25.4, fig.height = 70/25.4}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_temps_plot <- 
   shark_daily_td %>% 
   ggplot() +
@@ -97,48 +123,54 @@ shark_daily_temps_plot <-
   geom_line(aes(x = date, y = daily_mean_temp), colour = "grey40") +
   geom_smooth(aes(x = date, y = daily_mean_temp), colour = "grey40") +
   scale_x_date(date_breaks = "1 months", date_labels = '%b') +
-  theme_minimal() +
+  theme_bjc() +
   theme(axis.text.x = element_text(angle = 0)) +
   xlab("\nMonth of year (2021 - 2022)") +
   ylab("Temp (°C)")
 
 # View
 shark_daily_temps_plot
+
 # Save
-ggsave(filename = "output/shark_daily_temps_plot.pdf", plot = shark_daily_temps_plot, width = 161, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_daily_temps_plot.pdf", plot = shark_daily_temps_plot, 
+ #      device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
 ```
 
 # 2. DAILY MAXIMA #
 
 # Daily maximumm temperatures track closely with SST
-```{r}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_maxtemp_plot <- 
   shark_daily_td %>% 
   ggplot() +
-  geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
+  #geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
   geom_line(aes(x = date, y = daily_max_temp),  colour = "red") +
   #geom_smooth(aes(x = date, y = daily_max_temp), colour = "red") +
-  scale_x_date(date_breaks = "1 months", date_labels = '%b-%y') +
-  theme_minimal() +
-  #theme(plot.background = element_rect(fill = "transparent", colour = "black", linewidth = 1)) +
-  theme(axis.text.x = element_text(angle = 45, vjust = 0.6)) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  scale_y_continuous(limits = c(23, 31), breaks = c(23, 24, 25, 26, 27, 28, 29, 30, 31)) +
+  theme_bjc() +
   xlab("Date") + 
-  ylab("Temp (°C)")
+  ylab(expression(paste(italic("T"),""[b]* " (°C)"))) 
 
 # View
 shark_daily_maxtemp_plot
+```
+
+
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 # Save
-ggsave(filename = "output/shark_daily_maxtemp_plot.pdf", plot = shark_daily_maxtemp_plot, width = 161, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_daily_maxtemp_plot.pdf", plot = shark_daily_maxtemp_plot, 
+ #      device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
 ```
 
 ### Quick plot of relationship between SST and daily max temps (strong relationship)
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_SST_maxtemp_lm_plot <- 
   shark_daily_td %>% 
   ggplot() +
   geom_point(aes(x = SST, y = daily_max_temp)) +
   geom_smooth(aes(x = SST, y = daily_max_temp), method = "glm") +
-  theme_minimal() +
+  theme_bjc() +
   ylab("Daily max temp (°C)") + 
   xlab("SST (°C)")
 
@@ -152,72 +184,97 @@ shark_SST_maxtemp_lm_plot
 # 3. DAILY MEANS #
 
 # However, during summer months sharks were able to negatively thermoregulate mean body temperatures despite high SSTs:
-```{r}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_meantemp_plot <- 
   shark_daily_td %>% 
   ggplot() +
-  geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
+  #geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
   geom_line(aes(x = date, y = daily_mean_temp), colour = "grey40") +
   #geom_smooth(aes(x = date, y = daily_mean_temp), colour = "grey40") +
   #geom_vline(xintercept = as.Date("2022-01-19"), colour = "red", lwd = 1) +
-  geom_segment(aes(x = as.Date("2022-01-19"), xend = as.Date("2022-01-19"), y = 29.6, yend = 28.4), colour = "blue",
-                  arrow = arrow(length = unit(0.2, "cm"))) +
-  scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 20, vjust = 0)) +
-  xlab("\nDate") + 
-  ylab("Temp (°C)")
+ # geom_segment(aes(x = as.Date("2022-01-19"), xend = as.Date("2022-01-19"), y = 29.6, yend = 28.4), colour = "blue", arrow = arrow(length = unit(0.2, "cm"))) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  scale_y_continuous(limits = c(23, 31), breaks = c(23, 24, 25, 26, 27, 28, 29, 30, 31)) +
+  theme_bjc() +
+  xlab("Date") + 
+  ylab(expression(paste(italic("T"),""[b]* " (°C)"))) 
 
 # View
 shark_daily_meantemp_plot
+```
+
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+shark_daily_alltb_plot <- 
+  shark_daily_td %>% 
+  ggplot() +
+  geom_line(aes(x = date, y = daily_max_temp),  colour = "red") +
+  geom_line(aes(x = date, y = daily_mean_temp), colour = "grey40") +
+  geom_line(aes(x = date, y = daily_min_temp),  colour = "blue") +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  scale_y_continuous(limits = c(23, 31), breaks = c(23, 24, 25, 26, 27, 28, 29, 30, 31)) +
+  theme_bjc() +
+  xlab("Date") + 
+  ylab(expression(paste(italic("T"),""[b]* " (°C)"))) 
+
+# shark_daily_alltb_plot
+shark_daily_alltb_plot
+```
+
+
+
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 # Save
-ggsave(filename = "output/shark_daily_meantemp_plot.pdf", plot = shark_daily_meantemp_plot, width = 161, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_daily_alltb_plot.pdf", plot = shark_daily_alltb_plot, 
+#       device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
 ```
 
 # The maximum daily downward thermo-regulation was as much as 2°C (on 19 Jan 2022), when SST was around 30°C. Max depth recorded on this date was 122m. (Potentially could investigate what this would come out as at individual level?)
 ```{r}
-shark_daily_td <- 
-  shark_daily_td %>% 
-  mutate(temp_diff = daily_max_temp - daily_mean_temp)
+#shark_daily_td <- 
+#  shark_daily_td %>% 
+#  mutate(temp_diff = daily_max_temp - daily_mean_temp)
 
 shark_daily_td %>% 
-  #summarise(max_temp_diff = max(temp_diff))
-  filter(temp_diff == max(temp_diff))
+  summarise(max_temp_diff = max(daily_temp_diff))
+  #filter(daily_temp_diff == max(temp_diff))
+  
+shark_daily_td %>% 
+  slice_max(daily_temp_diff)
 ```
 
 ## When plotted over the course of the year, it is clear that these diffs are generally higher in the summer
-```{r}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_td %>% 
   ggplot() +
-  geom_line(aes(x = date, y = temp_diff)) +
-  geom_smooth(aes(x = date, y = temp_diff)) +
+  geom_line(aes(x = date, y = daily_temp_diff)) +
+  geom_smooth(aes(x = date, y = daily_temp_diff)) +
   scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme_minimal() +
+  theme_bjc() +
   theme(axis.text.x = element_text(angle = 45, vjust = 0.5)) +
   xlab("\nDate") + 
   ylab("Daily temp diff\n(max vs mean daily temp, °C)")
 ```
 
 ### Quick plot of relationship between SST and daily mean temps (there is one - will have to check effect size in model later)
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_daily_td %>% 
   ggplot() +
   geom_point(aes(x = SST, y = daily_mean_temp)) +
   geom_smooth(aes(x = SST, y = daily_mean_temp), method = "glm") +
-  theme_minimal() +
+  theme_bjc() +
   ylab("Daily mean temp (°C)") + 
   xlab("SST (°C)")
 ```
 
 # Can also look at mean temp SD ~ SST
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_daily_td %>% 
   ggplot() +
   #geom_point(aes(x = SST, y = temp_diff)) +
   #geom_smooth(aes(x = SST, y = temp_diff), method = "glm") +
   geom_point(aes(x = SST, y = daily_temp_sd)) +
   geom_smooth(aes(x = SST, y = daily_temp_sd), method = "gam") +
-  theme_minimal() +
+  theme_bjc() +
   theme(axis.text.x = element_text(angle = 45, vjust = 0.5)) +
   xlab("SST") + 
   ylab("Daily temp diff\n(max vs mean daily temp, °C)")
@@ -237,13 +294,13 @@ shark_daily_td %>%
 ```
 
 ### Plot relationship between SST and daily min temps (there isn't one)
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_SST_mintemp_lm_plot <- 
   shark_daily_td %>% 
   ggplot() +
   geom_point(aes(x = SST, y = daily_min_temp)) +
   geom_smooth(aes(x = SST, y = daily_min_temp), method = "glm") +
-  theme_minimal() +
+  theme_bjc() +
   ylab("Daily min temp (°C)") + 
   xlab("SST (°C)")
 
@@ -255,23 +312,44 @@ shark_SST_mintemp_lm_plot
 ```
 
 
-```{r}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+shark_daily_maxmintemp_plot <- 
+  shark_daily_td %>% 
+  ggplot() +
+  geom_line(aes(x = date, y = daily_max_temp),  colour = "red") +
+  geom_line(aes(x = date, y = daily_min_temp),  colour = "blue") +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  scale_y_continuous(limits = c(23, 31), breaks = c(23, 24, 25, 26, 27, 28, 29, 30, 31)) +
+  theme_bjc() +
+  xlab("Date") + 
+  ylab(expression(paste(italic("T"),""[b]* " (°C)"))) 
+
+# View
+shark_daily_maxmintemp_plot
+```
+
+
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+# Save
+#ggsave(filename = "output/shark_daily_maxmintemp_plot.pdf", plot = shark_daily_maxmintemp_plot, 
+  #     device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
+
+```
+
+
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_mintemp_plot <- 
   shark_daily_td %>% 
   ggplot() +
-  geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
   geom_line(aes(x = date, y = daily_min_temp),  colour = "blue") +
-  scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, vjust = 0.5)) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  scale_y_continuous(limits = c(23, 31), breaks = c(23, 24, 25, 26, 27, 28, 29, 30, 31)) +
+  theme_bjc() +
   xlab("\nDate") + 
   ylab("Temp (°C)")
 
 # View
 shark_daily_mintemp_plot
-# Save
-ggsave(filename = "output/shark_daily_mintemp_plot.pdf", plot = shark_daily_mintemp_plot, width = 161, height = 100, units = "mm", dpi = 300)
-
 ```
 
 # Combine figs
@@ -282,18 +360,19 @@ daily_min_temp_sum_fig <-
 
 # And save
 ```{r}
-ggsave(filename = "output/daily_min_temp_sum_fig.pdf", plot = daily_min_temp_sum_fig, width = 180, height = 60, units = "mm", dpi = 300)
+#ggsave(filename = "output/daily_min_temp_sum_fig.pdf", plot = daily_min_temp_sum_fig, 
+#       width = 180, height = 60, units = "mm", dpi = 300)
 ```
 
 
 ## Downward thermoregulation appears to correspond with maximum daily depths attained - depth movements used in order to thermoregulate
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_daily_td %>% 
   ggplot() +
-  geom_point(aes(x = temp_diff, y = daily_max_depth)) +
+  geom_point(aes(x = daily_temp_diff, y = daily_max_depth)) +
   #geom_smooth(aes(x = daily_max_temp, y = daily_max_depth), method = "gam", formula = y ~ s(x, bs = 'cs')) +
-  geom_smooth(aes(x = temp_diff, y = daily_max_depth), method = "lm") +
-  theme_minimal() +
+  geom_smooth(aes(x = daily_temp_diff, y = daily_max_depth), method = "lm") +
+  theme_bjc() +
   ylab("Daily maximum depth (mbsl)") + 
   xlab("Daily temperature difference (°C)")
 ```
@@ -302,7 +381,7 @@ shark_daily_td %>%
 
 
 ## Plot daily depths
-```{r fig.width = 170/25.4, fig.height = 70/25.4}
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_depth_plot <- 
 shark_daily_td %>%   
   ggplot() +
@@ -313,7 +392,7 @@ shark_daily_td %>%
   geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
   geom_smooth(aes(x = date, y = daily_max_depth), colour = "midnightblue",  method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
   #geom_smooth(aes(x = date, y = daily_max_depth), colour = "red") + # Basic smooth, rather than gam
-  theme_minimal() +
+  theme_bjc() +
   scale_y_reverse() +
   scale_x_date(date_breaks = "1 months", date_labels = '%b') +
   theme(axis.text.x = element_text(angle = 0)) +
@@ -326,60 +405,90 @@ shark_daily_td %>%
 shark_daily_depth_plot
 ```
 
+# Separately
 
-
-
-```{r}
+# Max only
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
 shark_daily_maxdepth_plot <- 
 shark_daily_td %>%   
   ggplot() +
   geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
   #geom_smooth(aes(x = date, y = daily_max_depth), colour = "midnightblue",  method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
-  theme_minimal() +
-  scale_y_reverse() +
-  scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme(axis.text.x = element_text(angle = 45)) +
-  #theme(axis.text.x = element_blank()) +
-  #theme(axis.title.x = element_blank()) +
-  #theme(axis.ticks.x = element_blank()) +
+  theme_bjc() +
+  scale_y_reverse(limits = c(201, 0)) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
   xlab("Date") +
-  ylab("Max daily depth \n (m below sealevel)")
+  ylab("Max daily depth (m)")
 
 # View
 shark_daily_maxdepth_plot
 # Save
-ggsave(filename = "output/shark_daily_maxdepth_plot.pdf", plot = shark_daily_maxdepth_plot, width = 161, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_daily_maxdepth_plot.pdf", plot = shark_daily_maxdepth_plot, 
+#       device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
 ```
 
 
-## Max depths vs SST
-```{r}
-SST_plot_plain <- 
-  shark_daily_td %>% 
+# Max and min 
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+shark_daily_maxmindepth_plot <- 
+shark_daily_td %>%   
   ggplot() +
-  geom_line(aes(x = date, y = SST), colour = "grey15", lwd = 0.5) +
-  scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme_minimal() +
-  theme(axis.text.x = element_blank()) +
-  theme(axis.title.x = element_blank()) +
-  theme(axis.ticks.x = element_blank()) +  
-  xlab("\nDate") + 
-  ylab("SST\n(°C)")
+  geom_line(aes(x = date, y = daily_min_depth), colour = "skyblue") +  
+  geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
+  theme_bjc() +
+  scale_y_reverse(limits = c(201, 0)) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  xlab("Date") +
+  ylab("Daily depth (m)")
 
-(MaxDep_SST_plot <- SST_plot_plain/shark_daily_maxdepth_plot)
+# View
+shark_daily_maxmindepth_plot
 
 # Save
-ggsave(filename = "output/MaxDep_SST_plot.pdf", plot = MaxDep_SST_plot, width = 161, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_daily_maxmindepth_plot.pdf", plot = shark_daily_maxmindepth_plot, 
+ #      device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
+```
+
+# Mean
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+shark_daily_meandepth_plot <- 
+shark_daily_td %>%   
+  ggplot() +
+  geom_line(aes(x = date, y = daily_mean_depth), colour = "dodgerblue") +
+  theme_bjc() +
+  scale_y_reverse(limits = c(51, 0)) +
+  scale_x_date(date_breaks = "1 months", date_labels = '%b') +
+  xlab("Date") +
+  ylab("Daily depth (m)")
+
+# View
+shark_daily_meandepth_plot
+
+# Save
+#ggsave(filename = "output/shark_daily_meandepth_plot.pdf", plot = shark_daily_meandepth_plot, 
+ #      device = cairo_pdf, width = 140, height = 70, units = "mm", dpi = 300)
+```
+
+
+
+
+## Plot max depths vs SST
+```{r fig.width = 140/25.4, fig.height = 70/25.4}
+max_dep_SST_fig <- cowplot::plot_grid(sst_2021_2022, shark_daily_maxdepth_plot, nrow = 2, rel_heights = c(0.6, 1))
+
+# Save
+#ggsave(filename = "output/MaxDep_SST_plot.pdf", plot = MaxDep_SST_plot, 
+#       device = cairo_pdf, width = 140, height = 40, units = "mm", dpi = 300)
 ```
 
 ## Can use a quick regression to see the relationship
-```{r}
+```{r fig.width = 70/25.4, fig.height = 70/25.4}
 shark_SST_maxdep_lm_plot <- shark_daily_td %>% 
   ggplot() +
   geom_point(aes(x = SST, y = daily_max_depth)) +
   #geom_smooth(aes(x = daily_max_temp, y = daily_max_depth), method = "gam", formula = y ~ s(x, bs = 'cs')) +
   geom_smooth(aes(x = SST, y = daily_max_depth), method = "glm") +
-  theme_minimal() +
+  theme_bjc() +
   ylab("Daily maximum depth (mbsl)") + 
   xlab("SST")
 shark_SST_maxdep_lm_plot
@@ -388,26 +497,26 @@ shark_SST_maxdep_lm_plot
 It looks like the 5°C difference (summer vs winter) leads to a 50m difference in maximum daily depths, from 60 - 120m
 
 ```{r}
-ggsave(filename = "output/shark_SST_maxdep_lm_plot.pdf", plot = shark_SST_maxdep_lm_plot,  width = 100, height = 100, units = "mm", dpi = 300)
+#ggsave(filename = "output/shark_SST_maxdep_lm_plot.pdf", plot = shark_SST_maxdep_lm_plot,  width = 100, height = 100, units = "mm", dpi = 300)
 ```
 
 # Combine figs
 ```{r fig.height=60/25.4, fig.width=180/25.4}
 daily_max_dep_sum_fig <- 
-  ggarrange(MaxDep_SST_plot, shark_SST_maxdep_lm_plot, ncol = 2, widths = c(1.6,1))
+  ggarrange(max_dep_SST_fig, shark_SST_maxdep_lm_plot, ncol = 2, widths = c(1.6,1))
 daily_max_dep_sum_fig
 ```
 
 # And save
 ```{r}
-ggsave(filename = "output/daily_max_dep_sum_fig.pdf", plot = daily_max_dep_sum_fig, width = 180, height = 60, units = "mm", dpi = 300)
+#ggsave(filename = "output/daily_max_dep_sum_fig.pdf", plot = daily_max_dep_sum_fig, width = 180, height = 60, units = "mm", dpi = 300)
 ```
 
 
 
 ## Final plot - SST / Shark temps / Max depth
 
-```{r}
+```{r fig.width = 140/25.4, fig.height = 100/25.4}
 temp_plot_plain <- 
   shark_daily_td %>% 
   ggplot() +
@@ -415,7 +524,7 @@ temp_plot_plain <-
   geom_line(aes(x = date, y = daily_min_temp), colour = "blue") +
   geom_line(aes(x = date, y = daily_mean_temp), colour = "grey40") +
   #scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
-  theme_minimal() +
+  theme_bjc() +
   theme(axis.text.x = element_blank()) +
   theme(axis.title.x = element_blank()) +
   theme(axis.ticks.x = element_blank()) +    xlab("\nDate") + 
@@ -427,7 +536,7 @@ shark_daily_td %>%
   geom_line(aes(x = date, y = daily_min_depth), colour = "skyblue") +
   geom_line(aes(x = date, y = daily_mean_depth), colour = "dodgerblue") +
   geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
-  theme_minimal() +
+  theme_bjc() +
   scale_y_reverse() +
   scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
   theme(axis.text.x = element_text(angle = 45)) +
@@ -435,12 +544,12 @@ shark_daily_td %>%
   ylab("Shark daily depths\n(m below sealevel)")
 
 combined_plot <- 
-    ggarrange(SST_plot_plain, temp_plot_plain, depth_plot_plain, nrow = 3, heights = c(0.5, 1, 1))
+    ggarrange(sst_2021_2022, temp_plot_plain, depth_plot_plain, nrow = 3, heights = c(0.5, 1, 1.5))
 
 # View
 combined_plot
 
-ggsave(filename = "output/combined_plot.pdf", plot = combined_plot, width = 161, height = 280, units = "mm", dpi = 300)
+#ggsave(filename = "output/combined_plot.pdf", plot = combined_plot, width = 161, height = 280, units = "mm", dpi = 300)
 ```
 
 
